--- a/first-app.client/src/app/components/card/card.component.html
+++ b/first-app.client/src/app/components/card/card.component.html
@@ -1,11 +1,11 @@
-<mat-card (click)="openCardModal()">
+<mat-card>
     <mat-card-header class="card-header">
         <mat-card-title class="card-title">{{card.title}}</mat-card-title>
         <button mat-icon-button [matMenuTriggerFor]="menu">
             <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item>
+            <button mat-menu-item (click)="openEditCardModal()">
                 <mat-icon>edit_square</mat-icon>
                 <span>Edit</span>
             </button>
@@ -16,7 +16,7 @@
         </mat-menu>
     </mat-card-header>
 
-    <mat-card-content>
+    <mat-card-content (click)="openCardModal()">
         <p class="description">{{ card.description }}</p>
         <div class="card-date">
             <mat-icon>event</mat-icon>
@@ -33,8 +33,8 @@
     <mat-card-footer>
         <mat-form-field class="card-move-to">
             <mat-label>Move to</mat-label>
-            <mat-select>
-                <mat-option *ngFor="let taskList of getLaskLists()" [value]="taskList.name">
+            <mat-select (selectionChange)="onSelectionChange($event.value)">
+                <mat-option *ngFor="let taskList of getLaskLists()" [value]="taskList.id">
                     <mat-icon>
                         <span class="material-symbols-outlined">
                             trending_flat
