--- a/first-app.client/src/app/components/edit-card-modal/edit-card-modal.component.css
+++ b/first-app.client/src/app/components/edit-card-modal/edit-card-modal.component.css
@@ -4,29 +4,18 @@
 
 .container {
     display: flex;
-    flex-direction: row;
-    width: 900px;
-    height: 700px;
-}
-
-.card-actions {
-    width: 30%;
-    height: 100%;
-    margin-top: 10px;
+    flex-direction: column;
+    width: 600px;
+    height: 450px;
 }
 
 .card-info {
-    width: 70%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: left;
-    margin-right: 15px;
 }
 
 .card-header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
@@ -38,4 +27,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+mat-dialog-actions {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.full-width {
+    width: 100%;
+}
+
+textarea {
+    height: max-content;
 }
