--- a/first-app.client/src/app/components/card/card.component.css
+++ b/first-app.client/src/app/components/card/card.component.css
@@ -5,6 +5,11 @@
     padding: 5px;
 }
 
+.warn-button .mat-icon,
+.warn-button span {
+    color: red;
+}
+
 .card-title {
     margin-left: 10px;
 }
