--- a/first-app.client/src/app/components/card/card.component.html
+++ b/first-app.client/src/app/components/card/card.component.html
@@ -9,7 +9,7 @@
                 <mat-icon>edit_square</mat-icon>
                 <span>Edit</span>
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item class="warn-button" (click)="deleteCardClick()">
                 <mat-icon>delete</mat-icon>
                 <span>Delete task</span>
             </button>
