--- a/first-app.client/src/app/app.component.css
+++ b/first-app.client/src/app/app.component.css
@@ -1,4 +1,13 @@
-﻿.spacer {
+﻿:host {
+    display: block;
+    height: inherit;
+}
+
+.full-height {
+    height: 100%;
+}
+
+.spacer {
     flex: 1 1 auto;
 }
 
