--- a/first-app.client/src/app/app.component.css
+++ b/first-app.client/src/app/app.component.css
@@ -39,3 +39,14 @@
     justify-content: center;
     align-items: center;
 }
+
+.board-add-dialog {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
+
+.board-add-dialog form mat-form-field {
+    align-items: center;
+    width: 100%;
+}
